# openmandate-python

./: LICENSE  README.md  pyproject.toml
src/openmandate/: __init__.py  _client.py  _constants.py  _exceptions.py  _pagination.py
src/openmandate/resources/: __init__.py  contacts.py  mandates.py  matches.py
src/openmandate/types/: __init__.py  mandate.py  match.py  params.py  shared.py
