[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openmandate"
dynamic = ["version"]
description = "Python SDK for OpenMandate"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.25.0,<1",
    "pydantic>=2.0.0,<3",
    "typing-extensions>=4.10,<5",
    "anyio>=3.5.0,<5",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://openmandate.ai"
Documentation = "https://docs.openmandate.ai"
Repository = "https://github.com/openmandate/openmandate-python"

[tool.hatch.version]
path = "src/openmandate/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/openmandate"]
